fixed photos not showing in gallery, and Logo on every page

--- a/design.css
+++ b/design.css
@@ -76,7 +76,6 @@ nav {
 }
 
 .menubtn:hover {
-    border-radius: 0;
     border-bottom: 0.1em solid rgb(58, 58, 58);
 }
 
